# fossall

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  fly.toml
client-wasm/: Cargo.toml
client-wasm/src/: lib.rs
docs/: DOMAIN_SETUP.md
server/: Cargo.toml
server/src/: layout.rs  main.rs  pages.rs
static/css/: style.css
static/js/: rv-model.js
